fix: Corrige 2 bugs dans l'évaluation des exceptions de l'ajout de congés